added excretions
